# HH-Mindbox-Test-Task

./: README.md  pyproject.toml  requirements.txt
tasks/1/: solution_1.py  test_solution_1.py
tasks/2/: solution_2.py  test_solution_2.py
